--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,10 @@
   to {
     transform: rotate(360deg);
   }
+} */
+.container{
+  width: 100%;
+  max-width: 1200px !important;
+  padding-left: 50px !important;
+  padding-right: 50px !important;
 }
