--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -153,7 +153,9 @@ p,h1,h2,h3,h4,h5,h6{
   display: flex;
   align-items: center;
 }
-
+.css-1oqqzyl-MuiContainer-root{
+  max-width: 1300px !important;
+}
 
 
 
