--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -156,8 +156,17 @@ p,h1,h2,h3,h4,h5,h6{
 .css-1oqqzyl-MuiContainer-root{
   max-width: 1300px !important;
 }
-
-
+.css-vpkyow{
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+.css-1idz92c-MuiCircularProgress-svg{
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+  border-radius: 50px;
+  border: 1px solid;
+}
 
 
 
