--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -38,7 +38,8 @@ p,h1,h2,h3,h4,h5,h6{
   min-height: 75px;
 }
 .css-11b3ww9-MuiPaper-root-MuiAppBar-root{
-  background-image: linear-gradient(to top, #fff 0%, rgba(105, 90, 166, 0.35) 99%, rgba(105, 90, 166, 0.5) 100%);
+  background-color: #3BB3C1 !important;
+  /* background-image: linear-gradient(to top, #fff 0%, rgba(105, 90, 166, 0.35) 99%, rgba(105, 90, 166, 0.5) 100%); */
 }
 /* .css-k008qs{
   height: 75px;
@@ -167,7 +168,12 @@ p,h1,h2,h3,h4,h5,h6{
   border-radius: 50px;
   border: 1px solid;
 }
-
+.css-14gq6m .css-p3j5y1-MuiTypography-root::before{
+  background-color: white !important;
+}
+.css-14gq6m .css-p3j5y1-MuiTypography-root::after{
+  background-color: #3BB3C1 !important;
+}
 
 
 
@@ -259,6 +265,30 @@ color: white;
   background: #FFFFFF;
   border-radius: 50px;
   animation: section-title-run 5s infinite linear; */
+}
+.css-19lxk5y{
+  background-image: url(../../public/images/profile.jpg) !important;
+  height: 400px;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  background-size: 100% 100%;
+}
+.about_section{
+  position: relative !important;
+}
+.about_section::after{
+  position: absolute;
+  content: '';
+  top: 0;
+  right: 0;
+  background-image: url(../../public/images/gf.gif) !important;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  opacity: 50%;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 @keyframes section-title-run {
