--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -267,7 +267,7 @@ color: white;
   animation: section-title-run 5s infinite linear; */
 }
 .css-19lxk5y{
-  background-image: url(../../public/images/profile.jpg) !important;
+  background-image: url(../../public/images/profile.png) !important;
   height: 400px;
   background-repeat: no-repeat;
   border-radius: 50%;
